# Lost-in-Time

./: README.md
Project-Enjoy/: Credits.txt  donetickets.xls  unresolvedtickets.xls
Project-Enjoy/KristoSittVerk/Lost-in-Time/: CMakeLists.txt
Project-Enjoy/KristoSittVerk/Lost-in-Time/Framework/: config.h
Project-Enjoy/KristoSittVerk/Lost-in-Time/Map/: game.cpp  game.h  layer.cpp  layer.h  map.h  object.h  tile.h
Project-Enjoy/KristoSittVerk/Lost-in-Time/Objects/: gameobject.h  movableobject.cpp  movableobject.h  object.h
Project-Enjoy/KristoSittVerk/Lost-in-Time/Player/: player.h
Project-Enjoy/KristoSittVerk/Lost-in-Time/data/: map.json
Project-Enjoy/KristoSittVerk/Lost-in-Time/state/: machine.h  stategame.cpp  stategame.h
Project-Enjoy/Lost-In-Time demo build v4/: Credits.txt
Project-Enjoy/Lost-in-Time/: CMakeLists.txt  Makefile  app.cpp  app.h  doxygen-config  levelOne.cpp  levelOne.h  main.cpp  testapp.cpp  testapp.h
Project-Enjoy/Lost-in-Time/Enemy/: AI.cpp  AI.h  AIEnemies.cpp  AIEnemies.h
Project-Enjoy/Lost-in-Time/Framework/: Camera.h  Music.cpp  Music.h  Sounds.cpp  Sounds.h  animation.cpp  animation.h  config.h  font.cpp  font.h  physics.cpp  physics.h
Project-Enjoy/Lost-in-Time/Interface/: Dialogue.cpp  Dialogue.h  health.cpp  health.h  highscore.cpp  highscore.h
Project-Enjoy/Lost-in-Time/Map/: bitmask.h  game.cpp  game.h  layer.cpp  layer.h  map.cpp  map.h  object.h  sprite.cpp
Project-Enjoy/Lost-in-Time/Objects/: ObjectSuper.cpp  ObjectSuper.h  gameobject.cpp  gameobject.h  movableobject.cpp  movableobject.h  object.cpp  object.h  playerobject.cpp  playerobject.h  playertest.cpp  playertest.h  princess.cpp  princess.h  princessobject.cpp  princessobject.h  savedobject.cpp  savedobject.h  spawnpoint.cpp  testcollidableplatform.cpp
Project-Enjoy/Lost-in-Time/Objects/Items/: Mace.h  item.cpp
Project-Enjoy/Lost-in-Time/Player/: player.cpp  player.h
Project-Enjoy/Lost-in-Time/Resources/Animation/: Bonfire animation.pyxel  Caverman Death Animation.pyxel  Caverman Jumping Animation.pyxel  Caverman Running Animation.pyxel  Caverman original.psd.pyxel  Club boobing up and down.pyxel  Club.pyxel  Portal animation.pyxel
Project-Enjoy/Lost-in-Time/Resources/Tile Map/: Beta Tile map Jason.json
Project-Enjoy/Lost-in-Time/SaveFiles/: save1.txt  save2.txt  save3.txt
Project-Enjoy/Lost-in-Time/State/: Lost-in-Time  main.cpp
Project-Enjoy/Lost-in-Time/State/state/: machine.h  state.h  statemainmenu.cpp  statepause.h
Project-Enjoy/Lost-in-Time/data/: highscore.txt  map.json
Project-Enjoy/Lost-in-Time/html/: AIEnemies_8cpp.html  AIEnemies_8cpp__incl.dot  AIEnemies_8cpp__incl.md5  AIEnemies_8h.html  AIEnemies_8h__dep__incl.dot  AIEnemies_8h__dep__incl.md5  AIEnemies_8h__incl.dot  AIEnemies_8h__incl.md5  AIEnemies_8h_source.html  AI_8cpp.html  AI_8cpp__incl.dot  AI_8cpp__incl.md5  AI_8h.html  AI_8h__dep__incl.dot  AI_8h__dep__incl.md5  AI_8h__incl.dot  AI_8h__incl.md5  AI_8h_source.html  CMakeLists_8txt.html  Camera_8h.html  Camera_8h__dep__incl.dot  Camera_8h__dep__incl.md5  Camera_8h_source.html  Dialogue_8cpp.html  Dialogue_8cpp__incl.dot  Dialogue_8cpp__incl.md5  Dialogue_8h.html  Dialogue_8h__dep__incl.dot  Dialogue_8h__dep__incl.md5  Dialogue_8h__incl.dot  Dialogue_8h__incl.md5  Dialogue_8h_source.html  Music_8cpp.html  Music_8cpp__incl.dot  Music_8cpp__incl.md5  Music_8h.html  Music_8h__dep__incl.dot  Music_8h__dep__incl.md5  Music_8h__incl.dot  Music_8h__incl.md5  (+428 more)
Project-Enjoy/Lost-in-Time/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_6.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  (+43 more)
Project-Enjoy/Lost-in-Time/latex/: AIEnemies_8cpp.tex  AIEnemies_8cpp__incl.dot  AIEnemies_8cpp__incl.md5  AIEnemies_8h.tex  AIEnemies_8h__dep__incl.dot  AIEnemies_8h__dep__incl.md5  AIEnemies_8h__incl.dot  AIEnemies_8h__incl.md5  AI_8cpp.tex  AI_8cpp__incl.dot  AI_8cpp__incl.md5  AI_8h.tex  AI_8h__dep__incl.dot  AI_8h__dep__incl.md5  AI_8h__incl.dot  AI_8h__incl.md5  CMakeLists_8txt.tex  Camera_8h.tex  Camera_8h__dep__incl.dot  Camera_8h__dep__incl.md5  Dialogue_8cpp.tex  Dialogue_8cpp__incl.dot  Dialogue_8cpp__incl.md5  Dialogue_8h.tex  Dialogue_8h__dep__incl.dot  Dialogue_8h__dep__incl.md5  Dialogue_8h__incl.dot  Dialogue_8h__incl.md5  Music_8cpp.tex  Music_8cpp__incl.dot  Music_8cpp__incl.md5  Music_8h.tex  Music_8h__dep__incl.dot  Music_8h__dep__incl.md5  Music_8h__incl.dot  Music_8h__incl.md5  Sounds_8cpp.tex  Sounds_8cpp__incl.dot  Sounds_8cpp__incl.md5  Sounds_8h.tex  (+253 more)
Project-Enjoy/Lost-in-Time/state/: loadgamestate.cpp  loadgamestate.h  machine.cpp  machine.h  state.h  stategame.cpp  stategame.h  stateloadgame.cpp  stateloadgame.h  statemainmenu.cpp  statemainmenu.h  statepause.cpp  statepause.h  teststate.cpp  teststate.h
Project-Enjoy/Martintest/Lost-in-Time/: CMakeLists.txt  testapp.cpp  testapp.h
Project-Enjoy/Martintest/Lost-in-Time/Map/: game.cpp  layer.cpp  map.cpp  map.h  sprite.h
Project-Enjoy/Martintest/Lost-in-Time/Objects/: gameobject.cpp  gameobject.h  immovableobject.cpp  immovableobject.h  movableobject.h  playertest.cpp  playertest.h  testcollidableplatform.cpp  testcollidableplatform.h
Project-Enjoy/Martintest/Lost-in-Time/state/: machine.h  state.h  stategame.cpp
Project-Enjoy/Other Code/Jump test No roof/sfml_square/: CMakeLists.txt  app.cpp  main.cpp  platform.h  square.cpp  square.h
src/: levelOne.cpp  main.cpp
src/Enemy/: AIEnemies.cpp  AIEnemies.h
src/Framework/: Camera.h  Music.cpp  Sounds.h  animation.cpp  animation.h  physics.cpp  physics.h
src/Interface/: deathscreen.cpp  deathscreen.h  health.cpp  highscore.h  timer.h
src/Map/: layer.h  map.h  object.cpp  sprite.cpp  sprite.h
src/Objects/: playerobject.cpp  (+5 more)
(+33 files in other folders)
